--- a/EquationSystem/demo.ipynb
+++ b/EquationSystem/demo.ipynb
@@ -125,7 +125,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyBase",
+   "display_name": "PyTorch",
    "language": "python",
    "name": "python3"
   },
@@ -139,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.13"
   },
   "orig_nbformat": 4
  },
