--- a/Interpolation/Demo1.ipynb
+++ b/Interpolation/Demo1.ipynb
@@ -5,11 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<left><font face='楷体' size=6>题目：</font></left>\n",
+    "题目：\n",
     "\n",
     "$$\n",
-    "I_{n} = \\int_{0}^{1} \\frac{x^n}{x+a}\\mathrm{d}x, n=0, 1, ... 10; 当a=0.05 和 a = 15, 求取值\n",
-    "$$"
+    "I_{n} = \\int_{0}^{1} \\frac{x^n}{x+a}\\mathrm{d}x, \\qquad n = 0, 1, ... 10,\n",
+    "$$\n",
+    "\n",
+    "当 $a=0.05$ 和 $a=15$, 求取值"
    ]
   },
   {
@@ -17,12 +19,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<left><font face='楷体' size=5>递推法</font></left>"
+    "递推法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +53,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<left><font face='楷体' size=5>估计法</font></left>"
+    "估计法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,12 +101,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<left><font face='楷体' size=5>直接法</font></left>"
+    "直接法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PyTorch",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.13"
   },
   "orig_nbformat": 4
  },
