--- a/Interpolation/Demo1.ipynb
+++ b/Interpolation/Demo1.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "# n = 0.05\n",
     "data1 = pd.DataFrame({'方法一': lst2, '方法二': lst6, '真实值': reslut1})\n",
-    "data1.to_csv('data/data1.csv')\n",
+    "data1.to_csv('./data/data1.csv')\n",
     "\n",
     "# n = 15\n",
     "data2 = pd.DataFrame({'方法一': lst4, '方法二': lst8, '真实值': reslut2})\n",
@@ -142,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -156,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.12"
   },
   "orig_nbformat": 4
  },
